@@ -90,6 +90,9 @@ are stored in `@sysconfdir@/rdup'.
 
 This option cannot be used when doing a remote backup.
 .TP
+.B \-f
+Force a full dump.
+.TP
 .B \-v
 Echo the files processed to standard error.
 .TP
